--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer>
   <div class="contato-container">
   <ul>
-    <li><a href="" target="_blank"><i class="bi bi-envelope-fill"></i></a></li>
-    <li><a href="" target="_blank"><i class="bi bi-telephone-fill"></i></a></li>
-    <li><a href="" target="_blank"><i class="bi bi-instagram"></i></a></li>
-    <li><a href="" target="_blank"><i class="bi bi-github"></i></a></li>
-    <li><a href="" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+    <li><a target="_blank"><i class="bi bi-telephone-fill">+55 11 968035646</i></a></li>
+    <li><a href="mailto:tatiane.psouza@hotmail.com" target="_blank"><i class="bi bi-envelope-fill"></i></a></li>
+    <li><a href="https://www.instagram.com/tatiane.psouzasouza/" target="_blank"><i class="bi bi-instagram"></i></a></li>
+    <li><a href="https://github.com/TatianeSouza38" target="_blank"><i class="bi bi-github"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/tatiane-souza-83b5a5241/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
       </ul>
       <span>&copy;Tatiane Pereira Souza</span>
     </div>
