--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,8 +11,8 @@
    <button class="google"><i class="bi bi-google"></i><span>Entrar com o Google</span></button>
    </div>
 <div class="about">
-  <a routerLink="" routerLinkActive="active">Esqueceu a senha?</a>
-  <a routerLink="" routerLinkActive="active">Cadastrar-se</a>
+  <a routerLink="#" routerLinkActive="active">Esqueceu a senha?</a>
+  <a routerLink="#" routerLinkActive="active">Cadastre-se</a>
 </div>
 </div>
 </main>
